media-services/bazarr/bazarr-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  namespace: media
spec:
  serviceName: bazarr
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:latest
        volumeMounts:
        - name: video-series-mount
          mountPath: /tv # Path inside the container
        - name: video-movies-mount
          mountPath: /movies
        - name: video-anime-mount
          mountPath: /anime
        - name: config
          mountPath: /config
      volumes:
      - name: video-movies-mount
        persistentVolumeClaim:
          claimName: video-movies-pvc
      - name: video-series-mount
        persistentVolumeClaim:
          claimName: video-series-pvc
      - name: video-anime-mount
        persistentVolumeClaim:
          claimName: video-anime-pvc
      - name: config
        persistentVolumeClaim:
          claimName: bazarr-config-pvc
