media-services/bazarr/bazarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
spec:
  selector:
    app: bazarr
  ports:
  - name: web-ui
    port: 6767
